--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <a class="home" href="/index.html"><h2>CheckMate</h2></a>
     </header>
     <div class="container">
-        <div class="hero-container">
+        <div class="main-content">
             <h1>CheckMate: Revolutionize Checking Math Exams</h1>
             <p>Capture, Grade, and Track Student Scores with Ease</p>
-            <a href="#">Try it now!</a>
+            <a href="/login.html">Try it now!</a>
         </div>
         <div class="image-container">
             <img src="/checkmate-removebg-preview.png" alt="">
