--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
                     </div>
                     <button type="submit" class="btn btn-primary">Login</button>
                 </form>
-                <a class="signup-btn" href="#"><span>Not registered yet? </span><span class="create-acc">Create an account</span></a>
+                <a class="signup-btn" href="/signup.html"><span>Not registered yet? </span><span class="create-acc">Create an account</span></a>
             </div>
         </div>
         <div class="image-container">
